setting of deploying

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cv",
-  "homepage": "https://github.io/SMourabit/Personal_portfolio",
+  "homepage": "https://SMourabit.github.io/Personal_portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
